Projeto front ajustes

--- a/front/Projeto/frontend/css/style.css
+++ b/front/Projeto/frontend/css/style.css
@@ -183,6 +183,10 @@ body {
   background-color: #d63384;
 }
 
+.categoria {
+  background-color: var(--categoria-cor) !important;
+}
+
 /* Toast Notifications */
 .toast-container {
   position: fixed;
